# libatures

./: .gitignore  Doxyfile  LICENSE  README.md  meson.build  meson_options.txt
.github/workflows/: test.yml
src/: bloom.h  bswap.h  glypharray.c  glypharray.h  gsub.c  gsub.h  hash.h  libatures.c  libatures.h
tests/: meson.build  tap.h  test_chain_generation.c  test_common.c  test_common.h  test_features.c  test_substitutions.c
tests/fonts/: LICENSES
